# VCTR

./: .clang-format  .gitignore  AVXRegister_8h_source.html  Abs_8h_source.html  Acos_8h_source.html  Acosh_8h_source.html  Add_8h_source.html  AlignedAllocator_8h_source.html  Angle_8h_source.html  AppleAccelerate_8h_source.html  Array_8h_source.html  Asin_8h_source.html  Asinh_8h_source.html  Atan_8h_source.html  Atanh_8h_source.html  CMakeLists.txt  Clamp_8h_source.html  Config_8h_source.html  Conjugate_8h_source.html  ContainerAndExpressionConcepts_8h_source.html  Cos_8h_source.html  Cosh_8h_source.html  Cube_8h_source.html  Decibels_8h_source.html  Divide_8h_source.html  Doxyfile  DoxygenLayout.xml  Exp_8h_source.html  ExpressionChainBuilder_8h_source.html  ExpressionTemplate_8h_source.html  FunctionConcepts_8h_source.html  GenericConcepts_8h_source.html  Imag_8h_source.html  IntelIPP_8h_source.html  LICENSE  Linspace_8h_source.html  Ln_8h_source.html  Log10_8h_source.html  Log2_8h_source.html  Map_8h_source.html  (+327 more)
.github/workflows/: Documentation.yml  UnitTests.yml
benchmark/: CMakeLists.txt  benchmark.cpp  macos-env.yaml  visualize.py
cmake/: FindIPP.cmake
demo/: CMakeLists.txt  demo.cpp
html/: Acosh_8h_source.html  Add_8h_source.html  Angle_8h_source.html  Array_8h_source.html  Asinh_8h_source.html  Clamp_8h_source.html  CompilerSpecificAttributes_8h_source.html  Config_8h_source.html  Conjugate_8h_source.html  Cos_8h_source.html  Divide_8h_source.html  ExpressionChainBuilder_8h_source.html  ExpressionTemplate_8h_source.html  Imag_8h_source.html  Log10_8h_source.html  Log2_8h_source.html  Mean_8h_source.html  Min_8h_source.html  Multiply_8h_source.html  NeonRegister_8h_source.html  NoAcceleration_8h_source.html  NormalizeSum_8h_source.html  NumericTypeConcepts_8h_source.html  NumericValueConcepts_8h_source.html  PlatformVectorOpsFilter_8h_source.html  Pow_8h_source.html  Range_8h_source.html  ReductionExpression_8h_source.html  SIMDFilter_8h_source.html  Sin_8h_source.html  Sqrt_8h_source.html  StdOstreamOperator_8h_source.html  Sum_8h_source.html  Tanh_8h_source.html  VctrBase_8h_source.html  VectorBoolWorkaround_8h_source.html  annotated_dup.js  classvctr_1_1AlignedAllocator-members.html  classvctr_1_1AlignedAllocator.html  classvctr_1_1Array-members.html  (+193 more)
html/search/: all_10.js  all_5.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_a.js  classes_b.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_e.js  groups_1.js  pages_0.js  typedefs_1.js  typedefs_4.js  typedefs_9.js  variables_2.js  variables_4.js  variables_7.js  variables_8.js  variables_b.js
include/vctr/: vctr.h  vctr_forward_declarations.h
include/vctr/Containers/: Array.h  HeapArray.h  Span.h  VctrBase.h  VctrBase.tpp  Vector.h  VectorBoolWorkaround.h
include/vctr/Expressions/: ExpressionChainBuilder.h  ExpressionTemplate.h  Readme.md  ReductionExpression.h
include/vctr/Expressions/BasicMath/: Abs.h  Add.h  Clamp.h  Cube.h  Divide.h  Max.h  Mean.h  Min.h  Multiply.h  NormalizeSum.h  Sqrt.h  Square.h  Subtract.h  Sum.h
include/vctr/Expressions/Complex/: Angle.h  Conjugate.h  Imag.h  PowerSpectrum.h  Real.h
include/vctr/Expressions/Core/: Abs.h  Add.h  Clamp.h  ClampLow.h  Divide.h  Max.h  Mean.h  Min.h  Multiply.h  Sqrt.h  Square.h  Subtract.h  Sum.h
include/vctr/Expressions/DSP/: Decibels.h
include/vctr/Expressions/Exp/: Exp.h  Ln.h  Log10.h  Log2.h  Pow.h
include/vctr/Expressions/Filter/: NoAcceleration.h  PlatformVectorOpsFilter.h  SIMDFilter.h
include/vctr/Expressions/Generic/: Map.h  TransformedBy.h  TransformedByStaticCast.h
include/vctr/Expressions/Trigonometric/: Acos.h  Acosh.h  Asin.h  Asinh.h  Atan.h  Atanh.h  Cos.h  Cosh.h  Sin.h  Sinh.h  Tan.h  Tanh.h
include/vctr/Generators/: Linspace.h
include/vctr/Miscellaneous/: AlignedAllocator.h  CompilerSpecificAttributes.h  Config.h  JUCEHelpers.h  Range.h  StdOstreamOperator.h
include/vctr/PlatformVectorOps/: AppleAccelerate.h  IntelIPP.h  PlatformVectorOpsHelpers.h  Readme.md
include/vctr/SIMD/: SIMDHelpers.h
include/vctr/TypeTraitsAndConcepts/: ContainerAndExpressionConcepts.h  FunctionConcepts.h  GenericConcepts.h  NumericTypeConcepts.h  NumericValueConcepts.h  Traits.h
include/vctr_utils/: Readme.md  compile_time_random_array.h  template_arg_string_conversion.h  vctr_juce_helpers.h
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  concepts_0.js  functions_0.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_c.js  functions_d.js  namespaces_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  typedefs_2.js  typedefs_3.js  typedefs_5.js  (+11 more)
test/: CMakeLists.txt  vctr_test.cpp
test/TestCases/: ArrayConstructors.cpp  ArrayMemberFunctions.cpp  ConversionOperators.cpp  ElementAccessFunctions.cpp  FindingAndManipulatingElements.cpp  InternalFunctions.cpp  Range.cpp  SpanConstructors.cpp  SpanMemberFunctions.cpp  TestUtils.cpp  VctrBaseMemberFunctions.cpp  VectorConstructors.cpp  VectorMemberFunctions.cpp  VectorStdPMRCompatibility.cpp
test/TestCases/Expressions/: Abs.cpp  Add.cpp  Angle.cpp  Clamp.cpp  Conjugate.cpp  Decibels.cpp  Divide.cpp  Exp.cpp  Ln.cpp  Log10.cpp  Log2.cpp  Map.cpp  Max.cpp  Mean.cpp  Min.cpp  Multiply.cpp  NormalizeSum.cpp  Pow.cpp  PowerSpectrum.cpp  RealImag.cpp  Square.cpp  SquareCube.cpp  Subtract.cpp  Sum.cpp  Transformation.cpp  Trigonometric.cpp
test/TestCases/Generators/: Linspace.cpp
test/TestMain/: CMakeLists.txt
test/include/vctr_test_utils/: vctr_approx.h  vctr_catch_matchers.h  vctr_test_common.h
test/include/vctr_test_utils/Matchers/: AllElementsEqualTo.h  Equals.h  EqualsTransformedBy.h  StringMakers.h
(+3 files in other folders)
